[package]
name = "fs_extra"
version = "1.2.0"
edition = "2018"
description = "Expanding std::fs and std::io. Recursively copy folders with information about process and much more."
license = "MIT"
authors = ["Denis Kurilenko <webdesus@gmail.com>"]
keywords = ["filesystem", "recursion", "copy", "dir", "file"]
homepage = "https://github.com/webdesus/fs_extra"
documentation = "https://docs.rs/fs_extra"
repository = "https://github.com/webdesus/fs_extra"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]

[dev-dependencies]
yaml-rust = "0.4"
chrono = "0.4"
filetime = "0.2"
